<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_side"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_side_shape"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Cormorant.MovieMe.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/label_movieme"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_greeting"
            style="@style/TextAppearance.Cormorant.MovieMe.Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/label_greeting"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/ib_menu"
            app:layout_constraintTop_toBottomOf="@id/ib_menu" />

        <TextView
            android:id="@+id/tv_headline"
            style="@style/TextAppearance.Cormorant.MovieMe.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_headline"
            android:textColor="@color/white"
            android:textSize="@dimen/text_34sp"
            app:layout_constraintStart_toStartOf="@+id/ib_menu"
            app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bot_side"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sheet_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <TextView
            android:id="@+id/tv_label_recent_movies"
            style="@style/TextAppearance.Cormorant.MovieMe.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:text="@string/label_recent_movies"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@id/ib_narrow_arrow_right1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_narrow_arrow_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_narrow_arrow_right"
            android:layout_marginEnd="@dimen/margin_24dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_recent_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_label_recent_movies"
            app:layout_constraintTop_toTopOf="@id/tv_label_recent_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_label_recent_movies"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_recent_movies" />

        <TextView
            android:id="@+id/tv_label_popular_now"
            style="@style/TextAppearance.Cormorant.MovieMe.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:text="@string/label_popular_now"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@id/ib_narrow_arrow_right2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_movies_horizontal" />

        <ImageButton
            android:id="@+id/ib_narrow_arrow_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_narrow_arrow_right"
            android:layout_marginEnd="@dimen/margin_24dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_popular_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_label_popular_now"
            app:layout_constraintTop_toTopOf="@id/tv_label_popular_now" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ib_narrow_arrow_right2"
            app:layout_constraintStart_toStartOf="@+id/tv_label_popular_now"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_popular_now"
            tools:listitem="@layout/item_movie_vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>